style links revised

--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>დავალება7</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <div class="sun">
-            <img class="sun" src="/img/sun-svgrepo-com.svg" alt="sun">
+            <img class="sun" src="img/sun-svgrepo-com.svg" alt="sun">
         </div>
         <div class="parachute">
-            <img src="/img/parachute-svgrepo-com.svg" alt="">
+            <img src="img/parachute-svgrepo-com.svg" alt="">
         </div>
         
-        <img src="/img/Sky-header.jpeg" alt="">
+        <img src="img/Sky-header.jpeg" alt="">
     </header>
 
     <section>
         <div>
             <div class="road">
-                <img src="/img/road-footer.jpg" alt="road">
+                <img src="img/road-footer.jpg" alt="road">
             </div>
             
             <div class="cars">
                 <div class="left-car">
-                    <img src="/img/car-svgrepo-com.svg" alt="leftcar">
+                    <img src="img/car-svgrepo-com.svg" alt="leftcar">
                 </div>
                 <div class="right-car">
-                    <img class="rightcar" src="/img/car-left.svg" alt="rightcar">
+                    <img class="rightcar" src="img/car-left.svg" alt="rightcar">
                 </div>
             </div>
         </div>   
