css background img

--- a/index.html
+++ b/index.html
@@ -9,38 +9,25 @@
 </head>
 <body>
     <header>
+        <!-- <img class="sky" src="img/Sky-header.jpeg" alt="sky"> -->
+
         <div class="sun">
             <img class="sun" src="img/sun-svgrepo-com.svg" alt="sun">
         </div>
         <div class="parachute">
-            <img src="img/parachute-svgrepo-com.svg" alt="">
+            <img src="img/parachute-svgrepo-com.svg" alt="parachute">
         </div>
-        
-        <img src="img/Sky-header.jpeg" alt="">
     </header>
 
     <section>
-        <div>
-            <div class="road">
-                <img src="img/road-footer.jpg" alt="road">
-            </div>
-            
-            <div class="cars">
-                <div class="left-car">
-                    <img src="img/car-svgrepo-com.svg" alt="leftcar">
-                </div>
-                <div class="right-car">
-                    <img class="rightcar" src="img/car-left.svg" alt="rightcar">
-                </div>
+        <div class="road">
+            <div>
+                    <img class="l-car" src="img/car-svgrepo-com.svg" alt="leftcar">
+                    <img class="r-car" src="img/car-left.svg" alt="rightcar">
             </div>
         </div>   
     </section>
-<footer>
-    <p>
-        <h4>Coded By NB</h4>
-    </p>
 
-</footer>
 
 </body>
 </html>
